# miniware-mdp-m01

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  plan.md
.github/workflows/: ci.yml  mdp-webui-tests.yml  py.yml  webui.yml
cli/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cli/src/: context-registry.ts  controller.ts  index.ts  node-serial.ts
cli/test/: controller.test.ts  node-serial.test.ts
cli/tests/: commands.test.ts  context-registry.test.ts  device-selection.test.ts  packet-handling.test.ts
cpp/: CLAUDE.md  CMakeLists.txt  MDP_PROTOCOL_OVERVIEW.md  kaitai_parser_example.cpp  machine.h  main.cpp  mdp.ksy  processingdata.cpp  processingdata.h
cpp/tests/: test_addr_parser.cpp  test_edge_cases_example.cpp  test_err240_parser.cpp  test_get_addr_generator.cpp  test_get_machine_generator.cpp  test_heartbeat_generator.cpp  test_kaitai_parser.cpp  test_machine_parser.cpp  test_reset_to_dfu_generator.cpp  test_rgb_generator.cpp  test_set_addr_generator.cpp  test_set_all_addr_generator.cpp  test_set_ch_generator.cpp  test_set_i_generator.cpp  test_set_isoutput_generator.cpp  test_set_v_generator.cpp  test_start_auto_match_generator.cpp  test_stop_auto_match_generator.cpp  test_synthesize_parser.cpp  test_updat_ch_parser.cpp  test_wave_parser.cpp
mdp-webui/: README.md  TESTING_IMPLEMENTATION_GUIDE.md  TEST_PLAN.md  TEST_RESULTS_SUMMARY.md  debug-test.js  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js
mdp-webui/docs/: serial-buffer-implementation.md
py/: clickhouse-visualize.py  miniware-marimo.py
webui/: index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vitest.config.js
(+133 files in other folders)
